redactable/tests/ui/slog_redacted_display_raw_string_rejected.stderr
error[E0277]: the trait bound `String: SlogRedactedDisplayExt` is not satisfied
  --> tests/ui/slog_redacted_display_raw_string_rejected.rs:16:23
   |
16 |     require_certified(&password);
   |     ----------------- ^^^^^^^^^ the trait `ToRedactedOutput` is not implemented for `String`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ToRedactedOutput`:
             NotSensitiveDebug<T>
             NotSensitiveDisplay<T>
             NotSensitiveJson<'_, T>
             RedactedJson
             RedactedJsonRef<'_, T>
             RedactedOutput
             RedactedOutputRef<'_, T>
             SensitiveValue<T, P>
   = note: required for `String` to implement `SlogRedactedDisplayExt`
note: required by a bound in `require_certified`
  --> tests/ui/slog_redacted_display_raw_string_rejected.rs:12:25
   |
12 | fn require_certified<T: SlogRedactedDisplayExt>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `require_certified`
