redactable/tests/ui/slog_redacted_display_raw_string_rejected.rs
//! A raw passthrough value must not satisfy `SlogRedactedDisplayExt`.
//!
//! `RedactableWithFormatter` is implemented as passthrough for `String` and
//! scalars so they can format inside redacted templates. The extension trait
//! therefore also requires `ToRedactedOutput` (generated by the display
//! derives); without that gate, `slog_redacted_display()` compiled on a raw
//! `String`, emitted the raw value to slog, and carried the `SlogRedacted`
//! certification marker.

use redactable::slog::SlogRedactedDisplayExt;

fn require_certified<T: SlogRedactedDisplayExt>(_: &T) {}

fn main() {
    let password = String::from("hunter2");
    require_certified(&password);
}
